@@ -8,7 +8,10 @@ nfeltsign(nf, [-1/2,0,0,0,0]~, [1..4])
 nfeltsign(nf, 0, 1)
 
 nfeltsign(nf, x+950385237198502187979577282097391163977102921506573742575513/495253880608585631635195731645995689515566957889181807495428)
-
+u = [x,2;2,-3];
+nfeltsign(nf, u)
+nfeltsign(nf, u, 1)
+nfeltsign(nf, u, [1..4])
 
 nf=nfinit(a^2-2);
 for(n=1,100,if(nfeltsign(nf,Mod(a+1,a^2-2)^n)!=[(-1)^n,1],print(n)))
